--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.0.0
+mod_version = 0.0.0-indev0
 maven_group = com.github.masongulu
 archives_name = mcmf
 enabled_platforms = fabric,forge
